trunk/Archive2/57/11506b0bb66d8e/output
main.cpp: In function ‘std::unique_ptr<X> foo()’:
main.cpp:11:12: error: cannot bind ‘std::unique_ptr<Y, std::default_delete<Y> >’ lvalue to ‘std::unique_ptr<Y, std::default_delete<Y> >&&’
     return y;
            ^
In file included from /usr/local/include/c++/4.9.0/memory:81:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/unique_ptr.h:220:2: note: initializing argument 1 of ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Up, _Ep>&&) [with _Up = Y; _Ep = std::default_delete<Y>; <template-parameter-2-3> = void; _Tp = X; _Dp = std::default_delete<X>]’
  unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
  ^
main.cpp:12:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
